methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:27: error: not found: value isGroundColor
    if(isGroundColor == c) {
       ^