methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
	while(!isOverBaggle()) {
    brushDown()
    brushUp()
    
    while(!isFacingTrail(c)) {
      left()
    }
    
    forward()
  }
  
  pickupBaggle()
  
  brushDown()
  brushUp()
}

def isFacingTrail(c:Color):Boolean = {
  if(isFacingWall()) {
    return false
  }
  else {
    forward()
    
    if(isGroundColor == c) {
      backward()
      return true
    }
    else {
      backward()
      return false
    }
  }
}